--- a/index.html
+++ b/index.html
@@ -1032,81 +1032,80 @@
   <!-- End Main -->
 
   <!-- Footer -->
-  <footer id="footer" class="section footer">
-    <div class="container">
-      <div class="footer__top">
-        <div class="footer-top__box">
-          <h3>EXTRAS</h3>
-          <a href="#">Brands</a>
-          <a href="#">Gift Certificates</a>
-          <a href="#">Affiliate</a>
-          <a href="#">Specials</a>
-          <a href="#">Site Map</a>
+<footer id="footer" class="section footer">
+  <div class="container">
+    <div class="footer__top">
+      <div class="footer-top__box">
+        <h3>EXTRAS</h3>
+        <a href="#">Brands</a>
+        <a href="#">Gift Certificates</a>
+        <a href="#">Affiliate</a>
+        <a href="#">Specials</a>
+        <a href="#">Site Map</a>
+      </div>
+      <div class="footer-top__box">
+        <h3>INFORMATION</h3>
+        <a href="about.html">About Us</a> <!-- Updated link to About Us -->
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Contact Us</a>
+        <a href="#">Site Map</a>
+      </div>
+      <div class="footer-top__box">
+        <h3>MY ACCOUNT</h3>
+        <a href="#">My Account</a>
+        <a href="#">Order History</a>
+        <a href="#">Wish List</a>
+        <a href="#">Newsletter</a>
+        <a href="#">Returns</a>
+      </div>
+      <div class="footer-top__box">
+        <h3>CONTACT US</h3>
+        <div>
+          <span>
+            <svg>
+              <use xlink:href="./images/sprite.svg#icon-location"></use>
+            </svg>
+          </span>
+          42 Dream House, Dreammy street, 7131 Dreamville, USA
         </div>
-        <div class="footer-top__box">
-          <h3>INFORMATION</h3>
-          <a href="#">About Us</a>
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms & Conditions</a>
-          <a href="#">Contact Us</a>
-          <a href="#">Site Map</a>
+        <div>
+          <span>
+            <svg>
+              <use xlink:href="./images/sprite.svg#icon-envelop"></use>
+            </svg>
+          </span>
+          company@gmail.com
         </div>
-        <div class="footer-top__box">
-          <h3>MY ACCOUNT</h3>
-          <a href="#">My Account</a>
-          <a href="#">Order History</a>
-          <a href="#">Wish List</a>
-          <a href="#">Newsletter</a>
-          <a href="#">Returns</a>
+        <div>
+          <span>
+            <svg>
+              <use xlink:href="./images/sprite.svg#icon-phone"></use>
+            </svg>
+          </span>
+          456-456-4512
         </div>
-        <div class="footer-top__box">
-          <h3>CONTACT US</h3>
-          <div>
-            <span>
-              <svg>
-                <use xlink:href="./images/sprite.svg#icon-location"></use>
-              </svg>
-            </span>
-            42 Dream House, Dreammy street, 7131 Dreamville, USA
-          </div>
-          <div>
-            <span>
-              <svg>
-                <use xlink:href="./images/sprite.svg#icon-envelop"></use>
-              </svg>
-            </span>
-            company@gmail.com
-          </div>
-          <div>
-            <span>
-              <svg>
-                <use xlink:href="./images/sprite.svg#icon-phone"></use>
-              </svg>
-            </span>
-            456-456-4512
-          </div>
-          <div>
-            <span>
-              <svg>
-                <use xlink:href="./images/sprite.svg#icon-paperplane"></use>
-              </svg>
-            </span>
-            Dream City, USA
-          </div>
+        <div>
+          <span>
+            <svg>
+              <use xlink:href="./images/sprite.svg#icon-paperplane"></use>
+            </svg>
+          </span>
+          Dream City, USA
         </div>
       </div>
     </div>
-    <div class="footer__bottom">
-      <div class="footer-bottom__box">
+  </div>
+  <div class="footer__bottom">
+    <div class="footer-bottom__box">
 
-      </div>
-      <div class="footer-bottom__box">
+    </div>
+    <div class="footer-bottom__box">
 
-      </div>
     </div>
-    </div>
-  </footer>
-  <!-- End Footer -->
+  </div>
+</footer>
+<!-- End Footer -->
 
   <!-- PopUp -->
   <div class="popup hide__popup">
